--- a/nuxt-client/assets/css/main.css
+++ b/nuxt-client/assets/css/main.css
@@ -3,6 +3,11 @@
   --text: #ffffff;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
 body { 
   margin: 0;
   font-family: "Open Sans", sans-serif;
