--- a/nuxt-client/assets/css/main.css
+++ b/nuxt-client/assets/css/main.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body { 
   margin: 0;
   font-family: "Open Sans", sans-serif;
@@ -14,3 +18,6 @@ body {
   height: 100dvh;
 }
 
+main {
+  min-height: 100dvh;
+}
